Adjust number width for group stats and personal stats

--- a/app/src/main/res/layout/fragment_group_statistics.xml
+++ b/app/src/main/res/layout/fragment_group_statistics.xml
@@ -24,7 +24,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:width="250dp"
                 android:text="@string/total_expenses"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -32,8 +31,9 @@
 
             <TextView
                 android:id="@+id/personal_total_expenses"
-                android:layout_width="74dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxWidth="150dp"
                 android:textAlignment="textEnd"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:width="250dp"
                 android:text="@string/total_payments"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -59,8 +58,9 @@
 
             <TextView
                 android:id="@+id/personal_total_payments"
-                android:layout_width="74dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxWidth="150dp"
                 android:textAlignment="textEnd"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +78,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:width="250dp"
                 android:text="@string/group_stats_payments_per_user"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -86,8 +85,9 @@
 
             <TextView
                 android:id="@+id/total_payments_per_user"
-                android:layout_width="74dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxWidth="150dp"
                 android:textAlignment="textEnd"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
